<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NuevoActivity">

    <EditText
        android:id="@+id/txtSerie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/hint_serie"
        android:inputType="text"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txtServicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/hint_servicio"
        android:inputType="text"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/hint_nombre"
        android:inputType="text"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txtTraccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/hint_traccion"
        android:inputType="text"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txtVelocidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/hint_velocidad"
        android:inputType="text"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txtAnchovia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/hint_anchovia"
        android:inputType="text"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txtPlazas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/hint_plazas"
        android:inputType="text"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txtPuestaservicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/hint_puestaservicio"
        android:inputType="text"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txtUnidades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/hint_unidades"
        android:inputType="text"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnGuarda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btn_guarda"
        android:textSize="24sp" />
</LinearLayout>