<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VerActivity">


    <TextView
        android:id="@+id/viewSerie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_serie" />

    <EditText
        android:id="@+id/txtSerie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/hint_serie"
        android:labelFor="@id/viewSerie"
        android:inputType="text"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewServicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_servicio" />

    <EditText
        android:id="@+id/txtServicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/hint_servicio"
        android:labelFor="@id/viewServicio"
        android:inputType="text"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_nombre" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/hint_nombre"
        android:labelFor="@id/viewNombre"
        android:inputType="text"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewTraccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_traccion" />

    <EditText
        android:id="@+id/txtTraccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/hint_traccion"
        android:labelFor="@id/viewTraccion"
        android:inputType="text"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewVelocidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_velocidad" />

    <EditText
        android:id="@+id/txtVelocidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/hint_velocidad"
        android:labelFor="@id/viewVelocidad"
        android:inputType="text"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewAnchovia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_anchovia" />

    <EditText
        android:id="@+id/txtAnchovia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/hint_anchovia"
        android:labelFor="@id/viewAnchovia"
        android:inputType="text"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewPlazas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_plazas" />

    <EditText
        android:id="@+id/txtPlazas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/hint_plazas"
        android:labelFor="@id/viewPlazas"
        android:inputType="text"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewPuestaservicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_puestaservicio" />

    <EditText
        android:id="@+id/txtPuestaservicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/hint_puestaservicio"
        android:labelFor="@id/viewPuestaservicio"
        android:inputType="text"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewUnidades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_unidades" />

    <EditText
        android:id="@+id/txtUnidades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/hint_unidades"
        android:labelFor="@id/viewUnidades"
        android:inputType="text"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnGuarda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btn_guarda"
        android:textSize="24sp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|top|end"
        android:clickable="true"
        android:src="@drawable/ic_edit" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabEliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|top|end"
        android:clickable="true"
        android:src="@drawable/ic_delete" />


</LinearLayout>